✨ feat(about.php): add about page with dynamic content from database ✨ feat(contact.php): add contact page 🐛 fix(bdd.php): fix getData() function to return data instead of var_dump 🎨 style(main.css): add background image to body 🎨 style(main.css): remove padding-bottom from body 🎨 style(main.css): add margin to header 🎨 style(main.css): add text-decoration-none to header links 🎨 style(main.css): add text-body-emphasis to header title 🎨 style(main.css): add text-body-secondary to footer links 🎨 style(main.css): add text-body-secondary to footer text 🎨 style(main.css): add border-bottom to header and footer links 🎨 style(main.css): add gap-3 to download CV button in about page 🎨 style(main.css): add rounded-circle to profile image in about page
✨ feat(footer.php): add footer, head and header partials to the project
✨ feat(projects.php): add projects page to the project, retrieve data from the 'PROJECTS' table and display it in cards

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5,6 +5,7 @@
 body {
   padding-bottom: 3rem;
   color: rgb(var(--bs-tertiary-color-rgb));
+  background: url("../images/shape.svg") no-repeat center center fixed;
 }
 
 /* Header sticky */
